test/programs/invalid_programs/syntax/non_type_for_return_type.jm
#!TypeError

T = 2

def foo() -> T
  return 2
end
